<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/widget_margin"
            android:textSize="18dp"
            android:text="1."/>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Facility Name"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewAddress1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_margin"
        android:text="123 Main Street"/>

    <TextView
        android:id="@+id/textViewAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_margin"
        android:text="Los Angeles, CA 92648"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_phone"
            android:layout_marginStart="@dimen/widget_margin"
            android:layout_marginEnd="@dimen/widget_margin"/>

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_rating"
            android:layout_marginStart="@dimen/widget_margin"
            android:layout_marginEnd="@dimen/widget_margin"/>

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_beds"
            android:layout_marginStart="@dimen/widget_margin"
            android:layout_marginEnd="@dimen/widget_margin"/>

        <TextView
            android:id="@+id/textViewBeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonAddFavorites"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/button_add_favorites"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:padding="@dimen/widget_margin"
        android:textColor="#FFFFFF"
        />

</LinearLayout>